# screensearch-v2

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  design-qa.md  rustfmt.toml
.github/workflows/: ci.yml
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs  supervisor.rs
apps/daemon/tests/: worker_supervision.rs
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  ErrorBoundary.tsx  api.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs  shell_settings.rs
apps/model-worker/: Cargo.toml
apps/model-worker/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: automation.rs  lib.rs
crates/application/tests/: answer_status.rs  automation_service.rs  search_planner.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/ipc/: Cargo.toml  build.rs
crates/ipc/proto/screensearch/v1/: screensearch.proto
crates/ipc/src/: convert.rs  lib.rs
crates/ipc/tests/: automation_keymap.rs
crates/model-runtime/: Cargo.toml
crates/model-runtime/src/: lib.rs  llama_sidecar.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_initial.sql  0002_nullable_ocr_confidence.sql  0003_search_evidence.sql  0004_real_embedding_model.sql  0005_archive_policy.sql  0006_generation_model_catalog.sql  0007_guarded_automation.sql  0008_chunk_reading_order_range.sql  0008_embedding_model_manifest.sql
crates/persistence/src/: lib.rs
crates/persistence/tests/: generation_model_catalog.rs  live_windows_archive.rs  synthetic_scale.rs
crates/ports/: Cargo.toml
crates/ports/src/: lib.rs
crates/windows/: Cargo.toml
crates/windows/src/: automation.rs  lib.rs  memory_pressure.rs
crates/windows/tests/: guarded_automation_fixture.rs
docs/adr/: 0001-process-boundaries.md  0002-storage-and-indexes.md  0003-model-lifecycle.md  0004-automation-safety.md  0005-clean-room-v2.md
docs/design/: README.md  p2-shell.md  p4-guarded-automation.md  useful-local-answers.md
docs/performance/: P1_SCALE_BASELINE.md  P3_MODEL_SELECTION.md
specs/: 00_PROJECT_INTAKE.md  01_PROJECT_CONTEXT.md  02_STRATEGIC_PLAN.md  03_MASTER_PRODUCTION_SPEC.md  04_CLAUDE_CODE_BUILD_PROMPT.md  05_BUILD_REVIEW.md  06_PATCH_PLAN.md  07_KNOWN_GAPS.md  08_CHANGELOG_AI.md
