[workspace]
resolver = "3"
members = [
    "apps/daemon",
    "apps/desktop/src-tauri",
    "apps/model-worker",
    "crates/application",
    "crates/domain",
    "crates/ipc",
    "crates/model-runtime",
    "crates/persistence",
    "crates/ports",
    "crates/windows",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "UNLICENSED"
authors = ["ScreenSearch contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
futures = "0.3"
fastembed = { version = "5.17.2", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png"] }
llama-cpp-2 = { version = "0.1.150", default-features = false, features = ["common"] }
libsql = { version = "0.9.29", default-features = false, features = ["core"] }
prost = "0.14"
protoc-bin-vendored = "3.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.49", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.19", features = ["serde", "v7"] }
windows = { version = "0.62", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
xcap = "0.9.6"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
