[package]
name = "screensearch-model-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
screensearch-domain = { path = "../../crates/domain" }
screensearch-ipc = { path = "../../crates/ipc" }
screensearch-model-runtime = { path = "../../crates/model-runtime" }
screensearch-ports = { path = "../../crates/ports" }
screensearch-windows = { path = "../../crates/windows" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
