[package]
name = "screensearch-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
blake3.workspace = true
chrono.workspace = true
futures.workspace = true
image.workspace = true
screensearch-domain = { path = "../domain" }
screensearch-ports = { path = "../ports" }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true

[lints]
workspace = true
