[package]
name = "screensearch-model-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
gpu-vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
blake3.workspace = true
encoding_rs.workspace = true
fastembed.workspace = true
futures.workspace = true
llama-cpp-2.workspace = true
num_cpus.workspace = true
reqwest.workspace = true
screensearch-domain = { path = "../domain" }
screensearch-ports = { path = "../ports" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
