[package]
name = "screensearch-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
libsql.workspace = true
screensearch-domain = { path = "../domain" }
screensearch-ports = { path = "../ports" }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
screensearch-application = { path = "../application" }
screensearch-model-runtime = { path = "../model-runtime" }
tempfile.workspace = true

[lints]
workspace = true
